--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   background: radial-gradient(circle at top left, #0ff, #002b36);
   padding: 100px 20px;
   text-align: center;
-  color: #00ffe1;
+  color: #0fffe1;
 }
 
 .content h1 {
